metadata/src/objects/Previous_Name__c.object
<CustomObject>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Previous Names</relationshipLabel>
        <relationshipName>Previous_Names</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>First_and_Middle_Names__c</fullName>
        <label>First and Middle Names</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Previous Name</label>
    <nameField>
        <displayFormat>PN{00000}</displayFormat>
        <label>Previous Name ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Previous Names</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>